--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -21,7 +21,7 @@
   --ifm-font-family-base: 'Inter';
   --ifm-heading-color: #020f3c;
   --ifm-color-gray-900: #031863;
-  --ifm-hover-overlay: #f6f8fe;
+  --ifm-hover-overlay: #ecebff;
   --ifm-color-emphasis-700: #031863;
   --ifm-menu-link-sublist-icon: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16px' height='16px' viewBox='0 0 24 24'><path fill='rgba(75,88,122,1)' d='M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z'></path></svg>");
 }
